--- a/flappy.html
+++ b/flappy.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <canvas height="450px" width="800px" id="canvas"></canvas>
+    <div id="score"></div>
     <button onclick="gameLoop()">Play</button>
 </body>
 </html>
